# pluma

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  mapa_mental_redacao_enem_2025.json  pyproject.toml
base_de_conhecimento/: Descrição dos arquivos.txt  Redacao_2019_1.txt  Redacao_2019_2.txt  Redacao_2019_3.txt  Redacao_2019_4.txt  Redacao_2019_5.txt  Redacao_2019_6.txt  Redacao_2019_7.txt  Redações 2025.txt  base_conhecimento_enem_kb_v1.json
config/: urls.py  wsgi.py
planos/: direcionamento-revisor-humano-versionamento.md  documentacao-completa.md  enem_temas.json  er-diagram.html  extrair_textos_enem.py  grafico-barras-turma.md  monetizacao.md  plano-feedback-autoavaliacao-rag-memoria.md  plano-para-agents.md
tests_django/: test_admin_temas.py  test_agente_detalhe_simplificado.py  test_anotacoes.py  test_api_core.py  test_avaliar_skills.py  test_banca_detalhe.py  test_banca_selector.py  test_client_cleanup.py  test_conhecimento_kb.py  test_consolidacao_unificada.py  test_copiloto.py  test_copiloto_rigoroso.py  test_corrigir_lista.py  test_dashboard_fila.py  test_dashboard_professor_avaliacoes_ia.py  test_dashboard_turma_gestao.py  test_disparar_avaliacao.py  test_email_notificacoes.py  test_escola_turma.py  test_falha_parcial_pool.py  test_ferramentas.py  test_fila.py  test_gerar_descricao.py  test_llm_post_processamento.py  test_log_prompts_subagentes.py  test_login_session.py  test_nav_counts.py  test_nav_counts_bugs.py  test_notificacao_banca_mista.py  test_regra_revisor.py  (+14 more)
(+194 files in other folders)
