[project]
name = "essay-essay"
version = "0.2.0"
description = "Sistema automatizado de correcao de redacoes do ENEM com IA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "django>=5.2.6,<6.0",
    "django-filter>=25.1",
    "django-q2>=1.8.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "openai>=2.44.0",
    "psycopg[binary]>=3.2.9",
    "plotly>=6.8.0",
    "python-dotenv>=0.21.0",
    "pydantic>=2.13.4",
    "setuptools<81",
    "whitenoise>=6.9.0",
    "cryptography>=44.0.0",
    "pillow>=12.3.0",
    "google-genai>=2.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "src/essay_essay"]

[tool.pytest.ini_options]
testpaths = ["tests_django"]
DJANGO_SETTINGS_MODULE = "config.settings.local"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
exclude = ["tests/"]
